--- a/static/css/HomePage.css
+++ b/static/css/HomePage.css
@@ -11,6 +11,62 @@
     width: 100%;
     height: 75px;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    background-color: #f1f1f1;
+    border-bottom: 1px #d6d6d6 solid;
+}
+
+.app-logo-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.app-logo {
+    display: block;
+    height: 45px;
+    width: auto;
+}
+
+.app-logo__title {
+    font-size: 1.5rem;
+    font-weight: 300;
+    margin: 0;
+    padding: 0;
+}
+
+.toggle-users-btn,
+.logout-btn {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.toggle-users-btn svg,
+.logout-btn svg {
+    height: 35px;
+    width: auto;
+}
+
+.toggle-users-btn svg path {
+    fill: #6b6c6b;
+}
+
+.toggle-users-btn:hover svg path {
+    fill: #ffcc00;
+}
+
+.logout-btn svg path {
+    stroke: #6b6c6b;
+}
+
+.logout-btn:hover svg path {
+    stroke: #ffcc00;
 }
 
 .content-wrapper {
@@ -36,6 +92,20 @@
 @media screen and (min-width: 576px) {
     .nav {
         height: 85px;
+        padding: 0 20px;
+    }
+
+    .app-logo {
+        height: 50px;
+    }
+
+    .app-logo__title {
+        font-size: 1.6rem;
+    }
+
+    .toggle-users-btn svg,
+    .logout-btn svg {
+        height: 40px;
     }
 
     .content-wrapper {
@@ -46,12 +116,25 @@
 @media screen and (min-width: 768px) {
     .nav {
         height: 95px;
+        padding: 0 25px;
+    }
+
+    .app-logo {
+        height: 55px;
+    }
+
+    .app-logo__title {
+        font-size: 1.7rem;
     }
 
     .users-container {
         position: static;
         width: 250px;
         height: auto;
+    }
+
+    .toggle-users-btn {
+        visibility: hidden;
     }
 
     .content-wrapper {
