feat: add login and logout user functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/HomePage.css')}}">
+    <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
     <script src="{{url_for('static', filename='app.js')}}" defer></script>
 </head>
 
