feat: add dynamic active users list rendering

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,26 +51,7 @@
                     </button>
                     <p class="section-heading__title">Users</p>
                 </div>
-                <ul id="users-list" class="users-list">
-                    <li class="user">
-                        <div class="active-indicator">
-                            <img src="../static/assets/plug-icon.svg" alt="Green plug icon" />
-                        </div>
-                        <p class="user__name">Jason Response</p>
-                    </li>
-                    <li class="user">
-                        <div class="active-indicator">
-                            <img src="../static/assets/plug-icon.svg" alt="Green plug icon" />
-                        </div>
-                        <p class="user__name">Weir Doe</p>
-                    </li>
-                    <li class="user">
-                        <div class="active-indicator">
-                            <img src="../static/assets/plug-icon.svg" alt="Green plug icon" />
-                        </div>
-                        <p class="user__name">Justin Case</p>
-                    </li>
-                </ul>
+                <ul id="users-list" class="users-list"></ul>
             </div>
             <div class="chat-container">
                 <ul id="messages" class="messages">
